--- a/firefox/.config/firefox/startpage/index.html
+++ b/firefox/.config/firefox/startpage/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="container">
     <div class="head">
-      <div class="logo"><img id="logo" src="icons/latte.png" /></div>
+      <div class="logo"><img id="logo" src="icons/mocha.png" /></div>
 
       <div class="bookmark">
         <div class="category">
